--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "background.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "bestzip dist.zip dist/*"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
+    "bestzip": "^2.2.1",
     "jest": "^30.0.4",
     "jszip": "^3.10.1"
   }
