--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xbookmarks-to-markdown",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "background.js",
   "scripts": {
     "test": "jest",
-    "build": "bestzip artifacts.zip artifacts/*"
+    "build": "bestzip extension.zip manifest.json background.js content.js popup.html popup.js popup.css icons jszip.min.js LICENSE"
   },
   "repository": {
     "type": "git",
