--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 {
   "manifest_version": 3,
   "name": "X Bookmarks to Markdown",
-  "version": "1.2",
+  "version": "1.3",
   "description": "Export your X bookmarks to Markdown.",
   "permissions": [
     "scripting",
-    "downloads"
-  ],
-  "host_permissions": [
-    "https://x.com/i/bookmarks"
+    "downloads",
+    "activeTab"
   ],
   "action": {
     "default_popup": "popup.html",
